<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">flashbar</string>
    <string name="title">Awesome Flashbar</string>
    <string name="basic_without_duration">Basic without duration</string>
    <string name="basic_with_duration">Basic with duration</string>
    <string name="gravity_top">Gravity Top</string>
    <string name="fb_title">Title</string>
    <string name="font_color">Custom Font &amp; Color</string>
    <string name="dismiss">Dismiss</string>
    <string name="background_color">Background Color</string>
    <string name="gradient">Gradient</string>
    <string name="overlay">Overlay</string>
    <string name="action_primary">Action Primary</string>
    <string name="plusminus">Plus Minus</string>
    <string name="icon">Custom Icon</string>
    <string name="progress">Progress</string>
    <string name="enter_exit_vertical">Enter/Exit Vertical</string>
    <string name="enter_exit_horizontal">Enter/Exit Horizontal</string>
    <string name="anim_icon">Animation Icon</string>
    <string name="vibration">Vibration</string>

</resources>