<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity"
>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
    >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="96dp"
            android:id="@+id/tv_title"
            android:text="@string/title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
                
        />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/basic_without_duration"
            android:id="@+id/btn_basic_without_duration"
            app:layout_constraintEnd_toStartOf="@id/btn_dismiss"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
                
        />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dismiss"
            android:id="@+id/btn_dismiss"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_basic_without_duration"
            app:layout_constraintTop_toTopOf="@id/btn_basic_without_duration"
                
        />
        
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/basic_with_duration"
            android:id="@+id/btn_basic_with_duration"
            app:layout_constraintEnd_toStartOf="@id/btn_gravity_top"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_basic_without_duration"
                
        />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gravity_top"
            android:id="@+id/btn_gravity_top"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_basic_with_duration"
            app:layout_constraintTop_toTopOf="@id/btn_basic_with_duration"
                
        />
        
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/fb_title"
            android:id="@+id/btn_fb_title"
            app:layout_constraintEnd_toStartOf="@id/btn_font_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_basic_with_duration"
        />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/font_color"
            android:id="@+id/btn_font_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_fb_title"
            app:layout_constraintTop_toTopOf="@id/btn_fb_title"
        />
        
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/background_color"
            android:id="@+id/btn_background_color"
            app:layout_constraintEnd_toStartOf="@id/btn_gradient"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_fb_title"
        />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gradient"
            android:id="@+id/btn_gradient"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_background_color"
            app:layout_constraintTop_toTopOf="@id/btn_background_color"
        />
        
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/overlay"
            android:id="@+id/btn_overlay"
            app:layout_constraintEnd_toStartOf="@id/btn_action_primary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_background_color"
        />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_primary"
            android:id="@+id/btn_action_primary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_overlay"
            app:layout_constraintTop_toTopOf="@id/btn_overlay"
        />
        
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/plusminus"
            android:id="@+id/btn_plusminus"
            app:layout_constraintEnd_toStartOf="@id/btn_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_overlay"
        />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/icon"
            android:id="@+id/btn_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_plusminus"
            app:layout_constraintTop_toTopOf="@id/btn_plusminus"
        />
        
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/progress"
            android:id="@+id/btn_progress"
            app:layout_constraintEnd_toStartOf="@id/btn_enter_exit_vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_plusminus"
        />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_exit_vertical"
            android:id="@+id/btn_enter_exit_vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_progress"
            app:layout_constraintTop_toTopOf="@id/btn_progress"
        />
        
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/enter_exit_horizontal"
            android:id="@+id/btn_enter_exit_horizontal"
            app:layout_constraintEnd_toStartOf="@id/btn_anim_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_progress"
        />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/anim_icon"
            android:id="@+id/btn_anim_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_enter_exit_horizontal"
            app:layout_constraintTop_toTopOf="@id/btn_enter_exit_horizontal"
        />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
